# gitops-demo-service

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
src/hello-app/: main.py
